# testlooper-test

./: README.md  pyproject.toml
.testlooper/: collect_pytest_tests.py  config.yaml
.testlooper/environments/: Dockerfile.linux-pytest
testlooper_test/: core.py
tests/: test_core.py  test_something_else.py
